# uya-slim

./: .cursorrules  .gitignore  .tmp_fmt_input.uya  .tmp_fmt_writeback.uya  1  AGENTS.md  CHANGELOG.md  Makefile  TODO.md  a.out  buglist.md  index.html  libc_completeness_report.md  libc_malloc_design.md  libc_todo.md  loop.py  readme.md  uyaFmt
.claude/: settings.json
backup/: uya.c
benchmarks/: baseline.json  go.mod  http_bench.c  http_bench.go  http_bench.uya  http_bench_async.uya  http_bench_async_epoll.c  http_bench_async_epoll.uya  http_bench_async_epoll_await.uya  http_bench_async_epoll_await_simple.uya  http_bench_async_epoll_await_stack.uya  http_bench_fork.uya  run_bench.sh  run_uyagin_http_bench.py  run_uyagin_http_bench.sh  run_uyagin_route_bench.sh  uyagin_http_bench.uya  uyagin_route_bench.uya  websocket_echo_baseline.json  websocket_echo_bench.go  websocket_echo_bench.uya
benchmarks/http_bench_tokio/: Cargo.toml
benchmarks/http_bench_tokio/src/: main.rs
compiler-c/: validate_test_programs.sh
docs/: ASM_DETAILED_IMPL_PLAN.md  ASM_FIXES_REPORT.md  ASM_IMPLEMENTATION_CHECKLIST.md  ASM_IMPLEMENTATION_PROGRESS.md  ASM_RISK_MITIGATION.md  ASM_STAGE3_COMPLETION_REPORT.md  ASM_STATUS_REPORT.md  ASM_TODO.md  CHANGELOG_v0.5.0.md  CHANGELOG_v0.5.8.md  CHANGELOG_v0.6.0.md  DEVELOPMENT.md  REFACTORING_PLAN.md  REFACTOR_PLAN_V2.md  REFACTOR_PLAN_V2_REVIEW.md  REFACTOR_PLAN_V2_STAGE4_DETAILED.md  REFACTOR_TODO.md  RELEASE_v0.2.21.md  RELEASE_v0.2.32.md  RELEASE_v0.3.1.md  RELEASE_v0.3.2.md  RELEASE_v0.3.3.md  RELEASE_v0.3.4.md  RELEASE_v0.5.5.md  STACK_SIZE.md  (+139 more)
(+1203 files in other folders)
