[package]
name = "http_bench_tokio"
version = "0.1.0"
edition = "2021"
description = "HTTP bench server (Tokio/Hyper), aligned with benchmarks/http_bench.go"

[dependencies]
bytes = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
